[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "abac"
version = "0.1.0"
description = ""
authors = ["Artem Titorenko <a.titorenko@idaproject.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
uvloop = { version = ">=0.17.0" }
pydantic = ">=1.10.7"
dependency-injector = ">=4.41.0"
loguru = ">=0.7.0"
sentry-sdk = ">=1.19.1"

SQLAlchemy = { version = ">=2,<3", extras = ["asyncio", "mypy"] }
SQLAlchemy-Utils = ">=0.40.0"
alembic = {version = ">=1.10.3", extras = ["tz"]}
asyncpg = ">=0.27.0"
greenlet = ">=2.0.2"
sqlalchemy-filterset = { git = "https://github.com/sqlalchemy-filterset/sqlalchemy-filterset.git", branch = "feat/sqlalchemy-2-support" }

httpx = ">=0.23.3"
choicesenum = ">=0.7.0"
itsdangerous = { version = "~2.1.2", optional = true }

# Typehinting
mypy = ">=1.2.0"
mypy-extensions = ">=1.0.0"

[tool.poetry.dev-dependencies]
commitizen = "~2.42.1"

# Tests
pytest = ">=7.3.0"
pytest-asyncio = ">=0.18.1"
pytest-async-sqlalchemy = ">=0.2.0"
pytest-xdist = ">=2.5.0"
factory-boy = ">=3.2.1"
pytest-httpx = "^0.21.2"
freezegun = "^1.2.2"
# Stubs
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"

# Formatting
black = "~22.3.0"
isort = ">=5.12.0"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "abac/__init__.py",
    "pyproject.toml:version"
]

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.mypy]
# Mypy configuration:
# https://mypy.readthedocs.io/en/latest/config_file.html
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_errors = false
ignore_missing_imports = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

exclude = "^(tests.migrations).*$"
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]


[[tool.mypy.overrides]]
module = [
    "factory.*", "sqlalchemy_utils.*", "choicesenum.*",
    "itsdangerous.*", "pytest_async_sqlalchemy.*", "sqlalchemy.testing"
]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "7.3"
addopts = "-ra -q"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
asyncio_mode = "auto"
